--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
     "vite": "^5.1.0"
   }
 }
